bug: fix varargs List.of misuse in export regression tests